node/106/mongosh mongodb127.0.0.127017directConnection=true&serverSelectionTimeoutMS=2000.txt
Windows PowerShell
Copyright (C) Microsoft Corporation. All rights reserved.

Install the latest PowerShell for new features and improvements! https://aka.ms/PSWindows

PS C:\Users\fishe> mongosh
Current Mongosh Log ID: 69b068f781eea71d0b7c2906
Connecting to:          mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.7.0
Using MongoDB:          8.2.5
Using Mongosh:          2.7.0

For mongosh info see: https://www.mongodb.com/docs/mongodb-shell/

------
   The server generated these startup warnings when booting
   2026-03-10T03:54:19.612-04:00: Access control is not enabled for the database. Read and write access to data and configuration is unrestricted
------

test> show dbs
admin   40.00 KiB
config  72.00 KiB
local   64.00 KiB
test> use foo
switched to db foo
foo> bar.insertOne({name:'guy1'})
ReferenceError: bar is not defined
foo> db.bar.insertOne({name:'guy1'})
{
  acknowledged: true,
  insertedId: ObjectId('69b06acd81eea71d0b7c2907')
}
foo> show collections
bar
foo> bar.find()
ReferenceError: bar is not defined
foo> db.bar.find()
[ { _id: ObjectId('69b06acd81eea71d0b7c2907'), name: 'guy1' } ]
foo> db.bar.insertMany([
|   { name: "Shirt", price: 20, category: "Clothing" },
|   { name: "Shoes", price: 80, category: "Footwear" },
|   { name: "Hat", price: 15, category: "Accessories" }
| ])
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('69b06be181eea71d0b7c2908'),
    '1': ObjectId('69b06be181eea71d0b7c2909'),
    '2': ObjectId('69b06be181eea71d0b7c290a')
  }
}
foo> db.bar.find()
[
  { _id: ObjectId('69b06acd81eea71d0b7c2907'), name: 'guy1' },
  {
    _id: ObjectId('69b06be181eea71d0b7c2908'),
    name: 'Shirt',
    price: 20,
    category: 'Clothing'
  },
  {
    _id: ObjectId('69b06be181eea71d0b7c2909'),
    name: 'Shoes',
    price: 80,
    category: 'Footwear'
  },
  {
    _id: ObjectId('69b06be181eea71d0b7c290a'),
    name: 'Hat',
    price: 15,
    category: 'Accessories'
  }
]
foo> db.bar.find().pretty()
[
  { _id: ObjectId('69b06acd81eea71d0b7c2907'), name: 'guy1' },
  {
    _id: ObjectId('69b06be181eea71d0b7c2908'),
    name: 'Shirt',
    price: 20,
    category: 'Clothing'
  },
  {
    _id: ObjectId('69b06be181eea71d0b7c2909'),
    name: 'Shoes',
    price: 80,
    category: 'Footwear'
  },
  {
    _id: ObjectId('69b06be181eea71d0b7c290a'),
    name: 'Hat',
    price: 15,
    category: 'Accessories'
  }
]
foo> db.bar.find({name:'shirt'})

foo> db.bar.find({name:'Shirt'})
[
  {
    _id: ObjectId('69b06be181eea71d0b7c2908'),
    name: 'Shirt',
    price: 20,
    category: 'Clothing'
  }
]
foo> db.bar.find({} {name:1,price:1})
Uncaught:
SyntaxError: Unexpected token, expected "," (1:15)

> 1 | db.bar.find({} {name:1,price:1})
    |                ^
  2 |

foo> db.bar.find({} ,{name:1,price:1})
[
  { _id: ObjectId('69b06acd81eea71d0b7c2907'), name: 'guy1' },
  { _id: ObjectId('69b06be181eea71d0b7c2908'), name: 'Shirt', price: 20 },
  { _id: ObjectId('69b06be181eea71d0b7c2909'), name: 'Shoes', price: 80 },
  { _id: ObjectId('69b06be181eea71d0b7c290a'), name: 'Hat', price: 15 }
]
foo> db.bar.find({} ,{name:1,price:1,id:0})
MongoServerError[Location31254]: Cannot do exclusion on field id in inclusion projection
foo> db.bar.find({} ,{name:1,price:1,_id:0})
[
  { name: 'guy1' },
  { name: 'Shirt', price: 20 },
  { name: 'Shoes', price: 80 },
  { name: 'Hat', price: 15 }
]
foo>
